--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-radio-buttons-group",
-  "version": "2.2.7",
+  "version": "2.2.8",
   "description": "Simple and Best. An easy to use radio buttons for react native apps.",
   "main": "./lib/index.ts",
   "scripts": {
@@ -31,6 +31,6 @@
   },
   "homepage": "https://github.com/thakurballary/react-native-radio-buttons-group#readme",
   "dependencies": {
-    "lodash": "4.17.21"
+    "lodash.isequal": "*"
   }
 }
