--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-radio-buttons-group",
-  "version": "2.3.2",
+  "version": "3.0.0",
   "description": "Simple and Best. An easy to use radio buttons for react native apps.",
   "main": "./lib/index.ts",
   "scripts": {
@@ -29,11 +29,5 @@
   "bugs": {
     "url": "https://github.com/thakurballary/react-native-radio-buttons-group/issues"
   },
-  "homepage": "https://github.com/thakurballary/react-native-radio-buttons-group#readme",
-  "dependencies": {
-    "lodash.isequal": "4.5.0"
-  },
-  "devDependencies": {
-    "@types/lodash.isequal": "4.5.6"
-  }
+  "homepage": "https://github.com/thakurballary/react-native-radio-buttons-group#readme"
 }
